AM_CPPFLAGS = $(JEFFX_CFLAGS) $(FOX_CFLAGS)
LDADD = $(FOX_LIBS) $(X11_LIBS) -L../jef -ljeffx


bin_PROGRAMS=fxcv


fxcv_SOURCES=\
  fxcv.cpp  main.cpp  widgets.cpp  guesstype.cpp  styler.cpp \
  tagger.cpp  taggerbase.cpp  path_dlg.cpp  func_dlg.cpp


noinst_HEADERS=\
  fxcv.h  widgets.h  guesstype.h  styler.h \
  tagger.h  taggerbase.h  path_dlg.h  func_dlg.h

